src/test/deca/syntax/invalid/homemade/unclosed_main_synt.res
src/test/deca/syntax/invalid/homemade/unclosed_main.deca:28:0: missing '}' at '<EOF>'
